css/custom.css
/* =Theme customization starts here Hello
Yellow Color:                 #fecb2f;
Yellow Hover Color:           #cca12e;
Light Gray:                   #f2f2f2;
Light Yellow:                 #fff5dc;
-------------------------------------------------------------- */


/* = Generic Fixes
-------------------------------------------------------------- */
h2 {
    text-transform: none !important;
}
/* = USED GLOBALLY 
-------------------------------------------------------------- */
.icongrey {
	color:#bbb ;
}
.iconyellow {
	color:#fecb2f ;
}
.icongreen {
	color:#009900 ;
}
.largeGreyLink {
    text-align:right;
    padding-bottom:0px;
    margin-bottom:0px;
}
.largeGreyLink a {
    color: #a0a0a0;
    font-size:16px;
    font-weight:bold;
    text-align:right;
}
.heading-underline {
	text-transform: none !important;
}		
.titleFIX {
	margin-bottom: 0px !important;
	padding-bottom: 0px !important;
}
.text-white {
	color: #fff !important;
}
#capitalText, .tlw-list li a {
	text-transform:capitalize;
}
.listnone {
	list-style: none;
}
#yellow-textlinks {
	color: #fff !important;
}
#yellow-textlinks a {
	color: #fecb2f !important;
	-o-transition:.2s;
	-ms-transition:.2s;
	-moz-transition:.2s;
	-webkit-transition:.2s;
	transition:.2s;
}
#yellow-textlinks a:hover {
	color: #cca12e;
}
.megaTITLE .evc-st-title {
	font-size: 45px !important;
    font-weight: 700 !important;
}
.btnhover-yellow .vc_btn3.vc_btn3-style-custom, .btnhover-black .vc_btn3.vc_btn3-style-custom, .btnhover-white .vc_btn3.vc_btn3-style-custom, .btnhover-gray .vc_btn3.vc_btn3-style-custom {
    background-image: none !important;
}
.btnhover-yellow a:hover {
    background: #cca12e !important;
	color: #fff !important;
}
.btnhover-black a:hover {
	background: #404040 !important;
}
.btnhover-white a:hover {
    background: #dddddd !important;
}
.btnhover-gray a:hover {
    background: #424242 !important;
}
#height0FIX {
    height:0px !important;
    overflow: hidden !important;
}
.alignleft {
	margin: 0px 20px 20px 0px !important;
}
.alignright {
	margin: 0px 0px 20px 20px !important;
}
.nobullets li{
	list-style:none;
}
.chpsAccordion h4{
    font-size:18px !important;
    font-weight:normal !important;
}
/* Flashing */
@-webkit-keyframes flash {
0% { opacity: .3; }
100% { opacity: 1; }
}
@keyframes flash {
0% { opacity: .3; }
100% { opacity: 1; }
}
.flashIMG {
width:100% !important;
height: auto !important;
}
.flashIMG:hover {
opacity: 1;
-webkit-animation: flash 1s;
animation: flash 1s;
}
.archiveYellBTN {
	font-size: 14px;
	padding: 15px 21px 15px 21px;
	background-color:#ffcc00; 
	color:#000000;
	text-decoration:none !important;
}
.archiveYellBTN-icon { 
    font-size: 16px !important;
    height: 14px;
    line-height: 14px !important;
	margin-right:8px;
	margin-top:1px;
}
/* = Homepage Title
-------------------------------------------------------------- */
.mainHomeTitle .evc-st-title {
    background-color: rgba(255,204,0,.95);
    font-family: "Archer A","Archer B","UCF Slab Serif Alt",serif !important;
    font-weight: 400 !important;
    font-size: 50px !important;
    line-height: 45px !important;
    margin-bottom: 0;
    padding: 1.1rem 1.5rem;
}
.mainHomeSubtitle .evc-st-title {
    background-color: rgba(0,0,0,.95);
    font-family: "Archer A","Archer B","UCF Slab Serif Alt",serif !important;
    font-weight: 400 !important;
	font-size: 24px !important;
    line-height: 20px !important;
    margin-bottom: 0;
    text-transform:none !important;
    padding: 1.1rem 1.5rem;
}
/* = HOMEPAGE BLOCKS
-------------------------------------------------------------- */
.unit-blocks a {
    display: flex;
    text-decoration:none;
    color: #FFF !important;
    padding:20px;
    -webkit-box-flex: 0;
    -ms-flex: 0 0 16.66666%;
    flex: 0 0 16.66666%;
    max-width: 16.66666%;
    min-height: 16.66666vw;
}
.unit-blocks a:hover {
    text-decoration:none !important;
	cursor: pointer !important;
}
.unit-blocks a span {
  -webkit-box-pack: end!important;
  -ms-flex-pack: end!important;
  justify-content: flex-end!important;
  align-self: flex-end;
  font-size: 2vw;
  font-family: "Knockout 49 A","Knockout 49 B","UCF Condensed Alt",sans-serif;
  font-weight: 400!important;
  line-height: .9;
  text-shadow: 0 0 10px rgba(0,0,0,.7);
  text-transform: uppercase!important;
  text-decoration:none !important;
  z-index: 2 !important;
}
.filter-sepia {
  transition: filter .5s ease-in-out;  
  -webkit-filter: grayscale(1) sepia(.15) contrast(.65) brightness(.65);
    filter: grayscale(1) sepia(.15) contrast(.65) brightness(.65);
}
.filter-sepia:hover {
    transition: filter .5s ease-in-out;
    -webkit-filter: grayscale(0) sepia(0) contrast(1) brightness(1);
    filter: grayscale(0) sepia(0) contrast(1) brightness(1);
}
.filter-pride {
  transition: filter .5s ease-in-out;  
  -webkit-filter: grayscale(1) sepia(.15) contrast(.65) brightness(.65) opacity(.8);
    filter: grayscale(1) sepia(.15) contrast(.65) brightness(.65) opacity(.8); 
}
.filter-pride:hover {
    transition: filter .5s ease-in-out;
    -webkit-filter: grayscale(0) sepia(0) contrast(1) brightness(1) opacity(1);
    filter: grayscale(0) sepia(0) contrast(1) brightness(1) opacity(1);
}
    @media (max-width: 1199.98px) {
       .unit-blocks a {
            -webkit-box-flex: 0;
            -ms-flex: 0 0 33.33333%;
            flex: 0 0 33.33333%;
            max-width: 33.33333%;
            min-height: 33.333vw;
        } 
        .unit-blocks a span {
          font-size: 4vw;
        }
    }
    @media (max-width: 767.98px) {
       .unit-blocks a {
            -webkit-box-flex: 0;
            -ms-flex: 0 0 50%;
            flex: 0 0 50%;
            max-width: 50%;
            min-height: 50vw;
        } 
        .unit-blocks a span {
          font-size: 6vw;
        }
    }
/* = SOCIAL MEDIA FEEDS
-------------------------------------------------------------- */
.fts-jal-fb-user-thumb {
    width: 40px !important;
    height: 40px !important;
}
/* ... */

